# Autogen-Research-Agent

./: README.md  README_FASTAPI.md  app.py  docker-compose.yml  main.py  pyproject.toml
Routes/: __init__.py
backend/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/Routes/: health_routes.py  info_routes.py  research_routes.py
backend/src/: agents.py  data_loader.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.tsx
frontend/src/components/: AboutSection.tsx  Header.tsx  PaperCard.tsx  ResultsSection.tsx  SearchForm.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
schema/: data_validation.py
